feat(dump): removed bearer auth token on post dump endpoint (#42)
