# openapi3.yaml
@@ -59,8 +59,6 @@ paths:
       tags:
         - dump
       summary: Create a dump
-      security:
-        - bearerAuth: []
       requestBody:
         content:
           application/json:
@@ -135,10 +133,6 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/error'
-  securitySchemes:
-    bearerAuth:
-      type: http
-      scheme: bearer
   schemas:
     dumpDate:
       type: string
